
	* help.el (function-arglist, function-documentation): 
	Deal more gracefully with tabs in the function arglist; in
	function-documentation, when stripping the arglist, pay attention
	to the fact that they may span multiple lines.

2009-08-09  Aidan Kehoe  <kehoea@parhasard.net>

	* faces.el (set-face-background-pixmap-file): 
	Remove some extra parentheses revealed by change set 7757334005ae.

2009-07-28  Mike Sperber  <mike@xemacs.org>

	* startup.el (startup-setup-paths): Use `emacs-data-roots' instead
	of `emacs-roots' where appropriate.

2009-07-28  Mike Sperber  <mike@xemacs.org>

	* startup.el (startup-setup-paths): Print a few more variables
	upon --debug-paths.

2009-07-18  Aidan Kehoe  <kehoea@parhasard.net>

	* files.el (find-file-create-switch-thunk): 
	Check that #'buffer-file-name gives non-nil before trying to
	determine whether that file exists; avoids problems in
	dired. Thank you Mats Lidell!

2009-07-13  Aidan Kehoe  <kehoea@parhasard.net>

	* code-files.el (insert-file-contents): 
	Set the buffer coding system even on error; especially important
	when dealing with nonexistent files. 
	If the `coding-system' property of an undecided coding system is
	itself undecided, don't use that as a value for
	buffer-file-coding-system. 

2009-07-12  Aidan Kehoe  <kehoea@parhasard.net>

	* files.el (after-find-file): 
	If the answer to "The directory containing %s does not exist.
	Create?" is no, kill the current buffer, since the user probably
	just misspelled the directory name. Thank you Rodney Sparapani!

2009-07-12  Aidan Kehoe  <kehoea@parhasard.net>

	* files.el (find-file-create-switch-thunk): 
	New macro, used to mark buffers created within #'find-file (and
	related) modified if the associated file doesn't exist.
	(find-alternate-file-other-window): 
	Correct this, pass CODESYS to find-file-other-window. 
	(find-file-read-only): 
	Correct behaviour of this function in the presence of wildcards. 
	(find-file): 
	(find-file-other-window): 